@@ -299,4 +299,7 @@
 
   (defvar si::*system-banner* (si::default-system-banner))
 
+  (in-package 'user)
+  (import 'si::info)
+
   t)
