@@ -128,5 +128,8 @@
  (setq compiler::*init-lsp* @LI-INIT-LSP@)
 
  (defvar si::*system-banner* (si::default-system-banner))
+ 
+ (in-package 'user)
+ (import 'si::info)
 
  t)
