@@ -18,8 +18,9 @@ gcl (2.6.1-34) unstable; urgency=low
   * Address longstanding FIXmE in gensym, so that two strings are not
     allocated for each gensym
   * Fix rare infinite loop bug in array.c
+  * Import si::info into 'user
 
- -- Camm Maguire <camm@enhanced.com>  Sat, 20 Mar 2004 02:16:11 +0000
+ -- Camm Maguire <camm@enhanced.com>  Sat, 20 Mar 2004 02:18:55 +0000
 
 gcl (2.6.1-33) unstable; urgency=low
 
